fixed css problem on mobile screen

--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -40,6 +40,11 @@
   &.app-reward-page {
     @apply bg-gray-900
   }
+  &.mobile-fixed {
+    @media (max-width: 639px) {
+      @apply h-auto;
+    }
+  }
 }
 .header {
   .production &{
